# osmium

./: Cargo.toml  README.md
resources/: Osmium_icon.psd
shaders/: fragment.glsl  shadow_vertex.glsl  vertex.glsl
shaders/include/: camera.glsl  lights.glsl  material.glsl
src/: main.rs
src/application/: app.rs  gui.rs  mod.rs
src/application/ecs/components/: mod.rs  osmium_camera.rs  osmium_object.rs
src/application/ecs/systems/: mod.rs  osmium_camera_controller_system.rs  osmium_object_system.rs
src/application/gui/: editor_context.rs  gui.rs  mod.rs
src/application/gui/tabs/: mod.rs  (+4 more)
src/core/: app.rs  buffer_manager.rs  descriptor_manager.rs  image_manager.rs  mod.rs  shader_manager.rs  window_manager.rs
src/engine/: app.rs  mod.rs
src/engine/config/: camera_config.rs  config.rs  light_config.rs  material.rs  material_config.rs  mesh_config.rs  mod.rs  renderer_config.rs  window.rs  window_config.rs
src/engine/ecs/: component_array.rs  component_manager.rs  coordinator.rs  ecs.rs  entity_manager.rs  mod.rs  signature.rs  system.rs  system_manager.rs  world_coordinator.rs
src/engine/physics/: bounds.rs  mod.rs  physics_world.rs
src/engine/renderer/: buffer_manager.rs  config.rs  descriptor_manager.rs  global_resources.rs  image_manager.rs  mod.rs  pipeline_constructor.rs  render_pass_constructor.rs  renderer.rs  shader_manager.rs  shadow_manager.rs  swapchain_manager.rs  vulkan_context.rs
src/engine/scene/: asset_manager.rs  material.rs  mesh.rs  mod.rs  render_item.rs  scene.rs
src/engine/window/: event_manager.rs  mod.rs  window_manager.rs
(+20 files in other folders)
