[package]
name = "osmium"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "*"
vulkano = "0.34.0"
shaderc = "0.10"
winit = "0.28.0"
image = "*"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rapier2d = "0.29"
rapier3d = "0.29"
glam = "*"

# For VUlkano optimization
[profile.dev]
opt-level = 1 
