[package]
name = "osmium"
version = "0.1.0"
edition = "2024"

[dependencies]
vulkano = "0.34.0"
winit = "0.28.0"
shaderc = "0.8"
nalgebra = "*"
image = "*"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rapier2d = "0.29"
rapier3d = "0.29"
tobj = "4"
# egui = "0.21"
egui-winit = "0.23"
egui_winit_vulkano = "0.26"
egui_dock = "0.8"

# For VUlkano optimization
[profile.dev]
opt-level = 1 
